# HyperMix

./: .gitignore  .zenodo.json  CITATION.cff  README.md  RELEASE.md  STATUS.md  pyproject.toml
dataset/: DATA_CARD.md  hypermix_spectral_library.csv  hypermix_spectral_library.npz
examples/: run_demo.py
hypermix/: __init__.py  background.py  baselines.py  benchmark.py  calibration.py  datasets.py  detector.py  metrics.py  mismatch.py  simulate.py  spectra.py
hypermix/data/: REFERENCE_SPECTRA.md  __init__.py  reference_spectra.csv
notebooks/: quickstart.ipynb
results/: background.json  background.md  band_sparsity.json  band_sparsity.md  benchmark.json  detector_eval.json  leaderboard.md  mismatch.json  mismatch.md  nonlinear.json  nonlinear.md  realism.json  realism.md  target_variability.json  target_variability.md  uncertainty.json  uncertainty.md  unmix_eval.json  unmix_eval.md
scripts/: background_experiment.py  band_sparsity_experiment.py  export_dataset.py  fetch_data.py  fetch_reference_spectra.py  make_leaderboard.py  nonlinear_experiment.py  realism_experiment.py  run_mismatch_experiment.py  target_variability_experiment.py  train_detector.py  train_unmixer.py  uncertainty_experiment.py
tests/: test_core.py
webapp/: README.md  package-lock.json  package.json
webapp/.openai/: hosting.json
webapp/app/: globals.css  layout.tsx  page.tsx
webapp/tests/: rendered-html.test.mjs
webapp/worker/: index.ts
