[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hypermix"
version = "0.1.0"
description = "Open detection of engineered biosignatures in remote hyperspectral imagery"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "João Victor" }]
keywords = ["hyperspectral", "remote sensing", "biosensing", "target detection", "unmixing"]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
viz = ["matplotlib>=3.6"]
dev = ["pytest>=7", "matplotlib>=3.6"]

[project.urls]
Homepage = "https://experiment.com/projects/cldzyecslnphmynjenmv"

[tool.setuptools]
packages = ["hypermix"]
