[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hypermix"
version = "0.4.0"
description = "Open detection of engineered biosignatures in remote hyperspectral imagery"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "João Victor" }]
keywords = ["hyperspectral", "remote sensing", "biosensing", "target detection", "unmixing"]
dependencies = ["numpy>=1.24", "scipy>=1.10"]

[project.optional-dependencies]
viz = ["matplotlib>=3.6"]
hsi = ["spectral>=0.23"]
train = ["torch>=2.0"]   # Milestone 2 detector; use Python 3.11/3.12 (torch has no 3.14 wheels yet)
dev = ["pytest>=7", "matplotlib>=3.6", "spectral>=0.23"]

[project.urls]
Homepage = "https://experiment.com/projects/cldzyecslnphmynjenmv"

[tool.setuptools]
packages = ["hypermix"]

[tool.setuptools.package-data]
hypermix = ["data/*.csv", "data/*.md"]
